fix: add a restriction on access to CRUD methods in views

--- a/LogisticsApp/Views/Factory/Products.cshtml
+++ b/LogisticsApp/Views/Factory/Products.cshtml
@@ -31,8 +31,11 @@
                 </a> - Количество: @factoryProduct.Quantity
 
                 <div>
-                    <a href="@Url.Action("UpdateProduct", "Factory", new { factoryId = Model.Factory.Id, productId = factoryProduct.Product.Id })" class="btn btn-warning btn-sm">Изменить количество</a>
-                    <a href="@Url.Action("DeleteProduct", "Factory", new { factoryId = Model.Factory.Id, productId = factoryProduct.Product.Id })" class="btn btn-danger btn-sm">Удалить</a>
+                    @if (User.IsInRole("Admin"))
+                    {
+                        <a href="@Url.Action("UpdateProduct", "Factory", new { factoryId = Model.Factory.Id, productId = factoryProduct.Product.Id })" class="btn btn-warning btn-sm">Изменить количество</a>
+                        <a href="@Url.Action("DeleteProduct", "Factory", new { factoryId = Model.Factory.Id, productId = factoryProduct.Product.Id })" class="btn btn-danger btn-sm">Удалить</a>
+                    }
 
                     @if (User.IsInRole("ShopOwner"))
                     {
