--- a/LogisticsApp/Views/Factory/Index.cshtml
+++ b/LogisticsApp/Views/Factory/Index.cshtml
@@ -14,8 +14,11 @@
                 @factory.Title
             </a> - Владелец фабрики: @factory.PortalUser.UserName
 
-            <a href="@Url.Action("Update", "Factory", new { id = factory.Id })" class="btn btn-warning btn-sm ml-2">Редактировать</a>
-            <a href="@Url.Action("Delete", "Factory", new { id = factory.Id })" class="btn btn-danger btn-sm ml-2">Удалить</a>
+            @if (User.IsInRole("Admin"))
+            {
+                <a href="@Url.Action("Update", "Factory", new { id = factory.Id })" class="btn btn-warning btn-sm ml-2">Редактировать</a>
+                <a href="@Url.Action("Delete", "Factory", new { id = factory.Id })" class="btn btn-danger btn-sm ml-2">Удалить</a>
+            }
         </li>
     }
 </ul>
