--- a/LogisticsApp/Views/Truck/Index.cshtml
+++ b/LogisticsApp/Views/Truck/Index.cshtml
@@ -14,8 +14,11 @@
                 @truck.Brand @truck.Model @truck.StateNumber
             </a> - Водитель: @truck.PortalUser.UserName
 
-            <a href="@Url.Action("Update", "Truck", new { id = truck.Id })" class="btn btn-warning btn-sm ml-2">Редактировать</a>
-            <a href="@Url.Action("Delete", "Truck", new { id = truck.Id })" class="btn btn-danger btn-sm ml-2">Удалить</a>
+            @if (User.IsInRole("Admin"))
+            {
+                <a href="@Url.Action("Update", "Truck", new { id = truck.Id })" class="btn btn-warning btn-sm ml-2">Редактировать</a>
+                <a href="@Url.Action("Delete", "Truck", new { id = truck.Id })" class="btn btn-danger btn-sm ml-2">Удалить</a>
+            }
         </li>
     }
 </ul>
