--- a/LogisticsApp/Views/Home/Index.cshtml
+++ b/LogisticsApp/Views/Home/Index.cshtml
@@ -34,10 +34,15 @@ else
         </form>
     }
 
-    <p>---</p>
+    @if (User.IsInRole("Admin"))
+    {
+        <form action="@Url.Action("GiveUserAdminRole", "Role")" method="get">
+            <button type="submit" class="btn btn-primary">Дать пользователю роль Администратора</button>
+        </form>
+    }
 
     <form action="@Url.Action("AddRole", "Role")" method="get">
-        <button type="submit" class="btn btn-secondary">Назначить роль</button>
+        <button type="submit" class="btn btn-secondary">Добавить роль</button>
     </form>
 
     @if (User.IsInRole("ShopOwner") || User.IsInRole("Admin"))
