--- a/LogisticsApp/Views/Role/GiveUserAdminRole.cshtml
+++ b/LogisticsApp/Views/Role/GiveUserAdminRole.cshtml
@@ -1,30 +1,32 @@
-﻿@model IEnumerable<LogisticsApp.Models.PortalUser>
+﻿@model LogisticsApp.Models.GiveUserAdminRoleViewModel
 
 <h2>Назначить роль администратора</h2>
 
-<table class="table">
-    <thead>
-        <tr>
-            <th>Пользователь</th>
-            <th>Email</th>
-            <th>Действие</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var user in Model)
+<form method="post">
+    @Html.AntiForgeryToken()
+
+    <div class="form-group">
+        <label for="userId">Выберите пользователя</label>
+
+        @if (Model.Users.Any())
         {
-            <tr>
-                <td>@user.UserName</td>
-                <td>@user.Email</td>
-                <td>
-                    <form method="post" asp-action="GiveUserAdminRole" asp-route-userId="@user.Id">
-                        <button type="submit" class="btn btn-success">Назначить роль Admin</button>
-                    </form>
-                </td>
-            </tr>
+            <select id="userId" class="form-control" asp-for="UserId">
+                <option value="" selected disabled>Выберите пользователя</option>
+                @foreach (var user in Model.Users)
+                {
+                    <option value="@user.Value">@user.Text</option>
+                }
+            </select>
+            <span asp-validation-for="UserId" class="text-danger"></span>
         }
-    </tbody>
-</table>
+        else
+        {
+            <p class="text-danger">Нет пользователей, которым можно добавить роль Администратора.</p>
+        }
+    </div>
+
+    <button type="submit" class="btn btn-success">Назначить роль Admin</button>
+</form>
 
 <div>
     <a href="@Url.Action("Index", "Home")">Вернуться на главную страницу</a>
